fixed the pet alignment when on the left

--- a/styles/cat.css
+++ b/styles/cat.css
@@ -60,5 +60,4 @@
 
 .pixel-cat pre {
   margin: 0;
-  text-align: right;
 } 
